--- a/docker/prod/nginx/default.conf
+++ b/docker/prod/nginx/default.conf
@@ -8,6 +8,15 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location / {
+    proxy_pass http://app:9000;  # or whatever your PHP-FPM container is
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;   # ← CRITICAL
+    proxy_set_header X-Forwarded-Host $host;
+}
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass laravel-muiltivendor-app:9000;
