--- a/docker/prod/nginx/default.conf
+++ b/docker/prod/nginx/default.conf
@@ -1,21 +1,16 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name _;
     root /var/www/html/public;
+
+    # Trust the X-Forwarded-For header from the upstream proxy (Nginx Proxy Manager)
+    real_ip_header X-Forwarded-For;
+    set_real_ip_from 0.0.0.0/0;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
-
-    location / {
-    proxy_pass http://app:9000;  # or whatever your PHP-FPM container is
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;   # ← CRITICAL
-    proxy_set_header X-Forwarded-Host $host;
-}
 
     location ~ \.php$ {
         include fastcgi_params;
@@ -23,6 +18,9 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_index index.php;
         fastcgi_read_timeout 300;
+
+        # Forward the HTTPS scheme so Laravel generates correct URLs and sets Secure cookies
+        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
     }
 
     location ~ /\.ht {
