--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,8 @@ services:
       dockerfile: docker/prod/php/php.dockerfile
     restart: unless-stopped
     volumes:
-      - ./src:/var/www/html
-      - vendor-data:/var/www/html/vendor
+      - ./src:/var/www/html:ro
+      - vendor-data:/var/www/html/vendor:ro
       - storage-data:/var/www/html/storage
       - cache-data:/var/www/html/bootstrap/cache
     environment:
@@ -23,9 +23,9 @@ services:
     depends_on:
       - laravel-muiltivendor-app
     volumes:
-      - ./src/public:/var/www/html/public
-      - storage-data:/var/www/html/storage
-      - ./docker/prod/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./src/public:/var/www/html/public:ro
+      - storage-data:/var/www/html/storage:ro
+      - ./docker/prod/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - npm_network
 
@@ -34,7 +34,7 @@ services:
     image: composer:2
     working_dir: /app
     volumes:
-      - ./src:/app
+      - ./src:/app:ro
       - vendor-data:/app/vendor
     command: sh -lc "composer install --no-dev --prefer-dist --no-interaction --optimize-autoloader"
     networks:
@@ -47,7 +47,7 @@ services:
     environment:
       - npm_config_cache=/tmp/.npm
     volumes:
-      - ./src:/app
+      - ./src:/app:ro
       - ./src/public:/app/public
       - node-modules:/app/node_modules
     command: sh -lc "npm ci && npm run build"
@@ -58,8 +58,8 @@ services:
     profiles: ["deploy"]
     image: multivendor-app:prod
     volumes:
-      - ./src:/var/www/html
-      - vendor-data:/var/www/html/vendor
+      - ./src:/var/www/html:ro
+      - vendor-data:/var/www/html/vendor:ro
       - storage-data:/var/www/html/storage
       - cache-data:/var/www/html/bootstrap/cache
     entrypoint: ["sh","-lc"]
@@ -76,8 +76,8 @@ services:
     image: multivendor-app:prod
     working_dir: /var/www/html
     volumes:
-      - ./src:/var/www/html
-      - vendor-data:/var/www/html/vendor
+      - ./src:/var/www/html:ro
+      - vendor-data:/var/www/html/vendor:ro
       - storage-data:/var/www/html/storage
       - cache-data:/var/www/html/bootstrap/cache
     command: php artisan migrate --force
